<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_user"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="44dp"
        android:background="@color/white"
        android:backgroundTint="@color/grey_900"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="292dp"
            android:gravity="left"
            android:src="@drawable/default_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="56dp"
            android:text="nickname"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_user">

        <LinearLayout
            android:id="@+id/ll_gn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#171a21"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="16dp">


                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="30dp"
                    android:gravity="left"
                    android:src="@drawable/setting" />

                <TextView
                    android:id="@+id/tv_setting_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="Settings"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="76dp">

               <ImageView
                    android:layout_width="32dp"
                    android:layout_height="30dp"
                    android:gravity="left"
                    android:src="@drawable/about" />

                <TextView
                    android:id="@+id/tv_setting_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="About"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="76dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="30dp"
                    android:gravity="left"
                    android:src="@drawable/gps_icon" />


                <TextView
                    android:id="@+id/tv_GPS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="GPS"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_gn"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/bt_setting_logout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:color="@android:color/holo_red_light"
                android:text="Log Out"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_setting_about"
                tools:ignore="NotSibling"
                tools:layout_editor_absoluteX="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#171a21"
        app:itemIconTint="@color/grey_100"
        app:itemTextColor="@color/white"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/bt_setting_logout"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="NotSibling">
        <Button
            android:id="@+id/bt_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="take photo"
            app:layout_constraintTop_toTopOf="@+id/tv_userId"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/bt_selectPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="select from album"
            app:layout_constraintTop_toTopOf="@+id/bt_takephoto"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>